fix some components